<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <!--tools:context=".Mainactivity">-->

    <!--The tools name space is to provide additional attributes that you can add to your XML to help-->
    <!--you debug and build your app.-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:hint="Name"
            android:singleLine="true"
            android:id="@+id/name_text_input"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/marging_right"
            android:inputType="textCapWords"
            android:clickable="true"
            />

        <TextView
            android:id="@+id/toppings_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:fontFamily="sans-serif"
            android:text="@string/toppings_tittle"
            android:textAllCaps="true"
            android:textColor="@color/color_subheading"
            android:textSize="@dimen/font_subheading" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkbox_toppings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginTop="@dimen/margin_top" />


            <TextView
                android:id="@+id/topping_1_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginTop="@dimen/margin_top"
                android:fontFamily="sans-serif"
                android:paddingLeft="@dimen/padding_left_toppings"
                android:text="@string/topping_1"
                android:textColor="@color/color_edit_text"
                android:textSize="@dimen/font_edit_view" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkbox_topping_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginTop="@dimen/margin_top" />


            <TextView
                android:id="@+id/topping_2_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginTop="@dimen/margin_top"
                android:fontFamily="sans-serif"
                android:paddingLeft="@dimen/padding_left_toppings"
                android:text="@string/topping_2"
                android:textColor="@color/color_edit_text"
                android:textSize="@dimen/font_edit_view" />

        </LinearLayout>

        <TextView
            android:id="@+id/quantity_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:fontFamily="sans-serif"
            android:text="@string/quantity_tittle"
            android:textAllCaps="true"
            android:textColor="@color/color_subheading"
            android:textSize="@dimen/font_subheading" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minus_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@color/color_button"
                android:onClick="decrement"
                android:text="@string/minus_button"
                android:textColor="@color/color_button_text"
                android:textSize="@dimen/font_button_quantity" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginTop="@dimen/margin_top"
                android:fontFamily="sans-serif"
                android:paddingLeft="@dimen/padding_quantity_left"
                android:paddingRight="@dimen/padding_quantity_right"
                android:text="@string/quantity_text_view"
                android:textColor="@color/color_edit_text"
                android:textSize="@dimen/font_edit_view" />

            <Button
                android:id="@+id/plus_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@color/color_button"
                android:onClick="increment"
                android:text="@string/plus_button"
                android:textColor="@color/color_button_text"
                android:textSize="@dimen/font_button_quantity" />

        </LinearLayout>


        <TextView
            android:id="@+id/order_summary_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:fontFamily="sans-serif"
            android:text="@string/order_summary_tittle"
            android:textAllCaps="true"
            android:textColor="@color/color_subheading"
            android:textSize="@dimen/font_subheading" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:fontFamily="sans-serif"
            android:text="@string/order_summary_text_view"
            android:textColor="@color/color_edit_text"
            android:textSize="@dimen/font_edit_view" />

        <Button
            android:id="@+id/button_order"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@color/color_button"
            android:contentDescription="@string/button"
            android:onClick="submitOrder"
            android:text="@string/button_order"
            android:textColor="@color/color_button_text"
            android:textSize="@dimen/font_button_order" />
    </LinearLayout>

</ScrollView>